--- a/waagreen/src/main/resources/messages.properties
+++ b/waagreen/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 student.form.title=View a Student Profile
 student.form.id=ID
 student.form.viewbtn= View Morning TM Meditation
+attendanceFormData.files = Content type doesn't match.
